@@ -5,6 +5,7 @@ Revision history for IO-Async-Loop-Uring
           - Correctly advertize abilities
           - Make run_once return undef on error
           - Delete handler upon cancelation
+          - Add watchdog support
 
 0.001     2026-01-06 23:56:09+01:00 Europe/Brussels
           - Initial release
